httpbin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  type: NodePort
  selector:
    app: httpbin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30088
